--- a/Pipfile
+++ b/Pipfile
@@ -4,3 +4,10 @@ verify_ssl = true
 
 [packages]
 Django = "*"
+
+[dev-packages]
+pytest = "*"
+pytest-django = "*"
+pytest-cov = "*"
+codecov = "*"
+model_mommy = "*"
