--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ python:
   #- "pypy3"
 # install dependencies
 install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH="$HOME/.yarn/bin:$PATH"
-  - make js
+  - make
   - pip install pipenv
 # run tests
 script:
